--- a/Sa--main/SA/perfil/perfil.css
+++ b/Sa--main/SA/perfil/perfil.css
@@ -108,6 +108,7 @@ input[type="date"]:focus {
     cursor: pointer;
     font-size: 16px;
     border: none;
+    margin-left: 8px;
 }
 
 .save-button:hover {
